objects/student__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>student</label>
    <nameField>
        <label>student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>